[gd_scene load_steps=13 format=3 uid="uid://d0ucyi1mj24j1"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_sfm8m"]
[ext_resource type="Shader" path="res://shaders/lightning.gdshader" id="1_vddau"]
[ext_resource type="FontFile" uid="uid://c5p5100gq1ugg" path="res://fonts/Avestrava Tattoo Personal Use Only.ttf" id="2_erb83"]
[ext_resource type="FontFile" uid="uid://ddfhe8fuipgdf" path="res://fonts/Bloodsoul PERSONAL USE ONLY!.ttf" id="3_fe7y4"]
[ext_resource type="FontFile" uid="uid://dwfq544lcvb6w" path="res://fonts/JMH Typewriter-Black.otf" id="5_udvb0"]
[ext_resource type="AudioStream" uid="uid://btfmmxkv8euxt" path="res://sounds/big-thunder-recorded-in-stereo-with-rain-fall-and-lightning-67697.mp3" id="6_ewwei"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jkvix"]
shader = ExtResource("1_vddau")
shader_parameter/effect_color = Color(0.862745, 0.0352941, 0.145098, 1)
shader_parameter/octave_count = 10
shader_parameter/amp_start = 0.5
shader_parameter/amp_coeff = 0.5
shader_parameter/freq_coeff = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ka64"]
bg_color = Color(0.67451, 0, 0, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dnko"]
bg_color = Color(0.862745, 0.0352941, 0.145098, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_giqon"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofvdp"]
bg_color = Color(0.862745, 0.0352941, 0.145098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxbg7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
z_index = -5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sfm8m")

[node name="Lightning" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jkvix")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -313.0
offset_top = -203.0
offset_right = -41.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erb83")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_1ka64")
theme_override_styles/hover = SubResource("StyleBoxFlat_4dnko")
theme_override_styles/normal = SubResource("StyleBoxFlat_giqon")
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erb83")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_1ka64")
theme_override_styles/hover = SubResource("StyleBoxFlat_4dnko")
theme_override_styles/normal = SubResource("StyleBoxFlat_giqon")
text = "Controls"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_erb83")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_1ka64")
theme_override_styles/hover = SubResource("StyleBoxFlat_4dnko")
theme_override_styles/normal = SubResource("StyleBoxFlat_giqon")
text = "Exit"

[node name="Hell" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.862745, 0.0352941, 0.145098, 1)
theme_override_fonts/font = ExtResource("3_fe7y4")
theme_override_font_sizes/font_size = 100
text = "HELL"
horizontal_alignment = 1

[node name="Squared" type="Label" parent="Hell"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 3.5
offset_right = 25.0
offset_bottom = 63.5
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_erb83")
theme_override_font_sizes/font_size = 60
text = "2"

[node name="Options" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_udvb0")
theme_override_font_sizes/font_size = 40
text = "Controls"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Controls" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_udvb0")
theme_override_font_sizes/font_size = 20
text = "W - Move Up
A - Move Down
S - Move Left
D - Move Right"
horizontal_alignment = 2

[node name="Controls2" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_udvb0")
theme_override_font_sizes/font_size = 20
text = "Up Arrow - Move Up
Down Arrow - Move Down
Left Arrow - Move Left
Right Arrow - Move Right
"

[node name="Back" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_udvb0")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_ofvdp")
theme_override_styles/normal = SubResource("StyleBoxFlat_wxbg7")
text = "Back
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ewwei")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Back" to="." method="_on_back_pressed"]
